<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="LoginActivity">

    <ImageView
        android:id="@+id/logoPop"
        android:layout_width="182dp"
        android:layout_height="184dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"

        android:contentDescription="TODO"
        app:srcCompat="@drawable/barbell" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/custom_button"
        android:drawableLeft="@drawable/ic_action_user"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:textSize="16dp"
        android:layout_marginBottom="35dp"
        android:layout_above="@+id/loginPassword"
        android:layout_centerHorizontal="true"
        android:textColorHint="#FFFFFF"
        />


    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_above="@+id/regLink"
        android:layout_alignStart="@+id/loginEmail"
        android:layout_alignLeft="@+id/loginEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-2dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginBottom="236dp"
        android:background="@drawable/custom_button"
        android:textColorHint="#FFFFFF"
        android:drawableLeft="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/regLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register Here."
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/logoPop"
        android:layout_alignStart="@+id/logoPop"
        android:id="@+id/linearLayout">


    </LinearLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="132dp"
        android:background="@drawable/custom_button"
        android:text="Login"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"

        />

</RelativeLayout>