<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/regPassword"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_above="@+id/loginLink"
        android:layout_alignStart="@+id/regUsername"
        android:layout_alignLeft="@+id/regUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-2dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginBottom="167dp"
        android:background="@drawable/custom_button"
        android:drawableLeft="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColorHint="#FFFFFF" />



    <EditText
        android:id="@+id/regConfirmPassword"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_above="@+id/regPassword"
        android:layout_alignStart="@+id/regUsername"
        android:layout_alignLeft="@+id/regUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-2dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/custom_button"
        android:drawableLeft="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:textColorHint="#FFFFFF" />

    <ImageView
        android:id="@+id/logoPop"
        android:layout_width="181dp"
        android:layout_height="182dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="TODO"
        app:srcCompat="@drawable/barbell" />


    <EditText
        android:id="@+id/regUsername"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_above="@+id/regEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:background="@drawable/custom_button"
        android:drawableLeft="@drawable/ic_action_user"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:textColorHint="#FFFFFF"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/regEmail"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_above="@+id/regConfirmPassword"
        android:layout_alignStart="@+id/regUsername"
        android:layout_alignLeft="@+id/regUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-2dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/custom_button"
        android:drawableLeft="@drawable/ic_action_email"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textColorHint="#FFFFFF" />

    <TextView
        android:id="@+id/loginLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp"
        android:text="Back to Login." />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/logoPop"
        android:layout_alignStart="@+id/logoPop"
        android:id="@+id/linearLayout">


    </LinearLayout>

    <Button
        android:id="@+id/regBtn"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="132dp"
        android:background="@drawable/custom_button"
        android:text="Sign Up"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"

        />


</RelativeLayout>